--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "pin",
   "version": "0.0.0",
   "private": true,
+  "main": "app.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node ./bin/www"
+  
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
