--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "./bin/www",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "bin/www",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/bin/www"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "/bin/www"
+        }
     ]
-  }
+}
