--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "20.x"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon ./bin/www"
   
   },
   "dependencies": {
