--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "pin",
   "version": "0.0.0",
   "private": true,
-  "main": "app.js",
+  "main": "bin/www",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon"
   
   },
   "dependencies": {
